--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
+    "meshline": "^3.3.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "three": "^0.179.1",
+    "threejs-meshline": "^2.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
